FE_221024_albumPhotoDetail: 앞뒤로 이동해서 이전, 다음 사진 보기 구현 완료
Former-commit-id: d5107a8944690a3f8252200d2b6e4f2346aa453d

--- a/android/app/src/main/res/layout/fragment_record_album_photo_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_album_photo_detail.xml
@@ -47,7 +47,7 @@
     <ImageButton
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:id="@+id/next_btn"
+        android:id="@+id/forward_btn"
         android:padding="0dp"
         android:src="@drawable/ic_baseline_arrow_forward_ios_24"
         app:layout_constraintTop_toTopOf="@id/photo_image"
