--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -20,7 +20,7 @@
             android:gravity="center_horizontal"
             android:textSize="30dp"
             android:layout_marginTop="8dp"
-            android:text="ZIP"
+            android:text="@string/home_logo"
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
@@ -29,7 +29,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:layout_marginTop="8dp"
-            android:text="행복한 우리 가조쿠"
+            android:text="@string/home_family_title"
             app:layout_constraintTop_toBottomOf="@+id/topText" />
 
         <FrameLayout
@@ -46,7 +46,7 @@
             android:layout_height="wrap_content"
             android:gravity="center_horizontal"
             android:layout_marginTop="8dp"
-            android:text="우리 가족 구성원"
+            android:text="@string/home_member"
             app:layout_constraintTop_toBottomOf="@id/home_house" />
 
         <androidx.recyclerview.widget.RecyclerView
@@ -64,9 +64,9 @@
             android:id="@+id/home_mission"
             android:layout_width="match_parent"
             android:layout_height="220dp"
-            android:layout_marginHorizontal="4dp"
+            android:layout_marginHorizontal="8dp"
             android:layout_marginTop="8dp"
-            android:background="@color/white"
+            android:background="@drawable/card_background"
             android:elevation="5dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -80,7 +80,11 @@
             android:text="@string/mission_top"
             android:textSize="20dp"
             android:elevation="10dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginVertical="8dp"
             android:outlineProvider="none"
+            app:layout_constraintStart_toStartOf="@id/home_mission"
+            app:layout_constraintEnd_toEndOf="@id/home_mission"
             app:layout_constraintBottom_toTopOf="@id/mission1"
             app:layout_constraintTop_toTopOf="@+id/home_mission"></TextView>
 
@@ -89,9 +93,8 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginHorizontal="8dp"
-            app:layout_constraintCircleRadius="10dp"
-            android:background="@color/white"
+            android:layout_marginHorizontal="24dp"
+            android:background="@drawable/card_background"
             android:elevation="10dp"
             app:layout_constraintBottom_toTopOf="@id/mission2"
             app:layout_constraintEnd_toEndOf="@id/home_mission"
@@ -118,20 +121,36 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginLeft="4dp"
+            android:gravity="center_vertical"
             android:elevation="15dp"
             android:outlineProvider="none"
             android:text="@string/mission1_title"
-            app:layout_constraintEnd_toEndOf="@id/mission1"
+            app:layout_constraintEnd_toStartOf="@id/mission1_btn"
             app:layout_constraintStart_toEndOf="@id/mission1_point"
             app:layout_constraintTop_toTopOf="@id/mission1"
-            app:layout_constraintVertical_chainStyle="packed"></TextView>
-
+            app:layout_constraintVertical_chainStyle="packed"
+            ></TextView>
+        <TextView
+            android:id="@+id/mission1_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:elevation="15dp"
+            android:outlineProvider="none"
+            android:gravity="center_vertical"
+            app:layout_constraintEnd_toEndOf="@id/mission1"
+            app:layout_constraintTop_toTopOf="@id/mission1"
+            app:layout_constraintBottom_toTopOf="@id/mission1_content"
+            android:text="@string/mission_btn"
+            android:textColor="@color/main_color"
+            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
+            ></TextView>
         <TextView
             android:id="@+id/mission1_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
             android:layout_marginLeft="4dp"
             android:elevation="15dp"
             android:outlineProvider="none"
@@ -145,21 +164,19 @@
             android:id="@+id/mission1_progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="20dp"
+            android:layout_height="12dp"
             android:layout_marginRight="8dp"
             android:layout_marginBottom="8dp"
             android:layout_marginLeft="4dp"
             android:elevation="15dp"
             android:outlineProvider="none"
             android:progress="25"
-            android:scaleY="3"
+            android:progressDrawable="@drawable/progress_drawable"
             app:layout_constraintBottom_toBottomOf="@id/mission1"
             app:layout_constraintEnd_toEndOf="@id/mission1"
             app:layout_constraintStart_toEndOf="@id/mission1_point"
             app:layout_constraintTop_toBottomOf="@id/mission1_content"></ProgressBar>
-        <!--        <Button-->
-        <!--            android:layout_width="wrap_content"-->
-        <!--            android:layout_height=""></Button>-->
+
 
         <!--        <TextView-->
         <!--            android:layout_width="wrap_content"-->
@@ -172,8 +189,9 @@
             android:id="@+id/mission2"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:layout_marginBottom="20dp"
-            android:background="@color/white"
+            android:layout_marginBottom="8dp"
+            android:layout_marginHorizontal="24dp"
+            android:background="@drawable/card_background"
             android:elevation="10dp"
             app:layout_constraintBottom_toBottomOf="@id/home_mission"
             app:layout_constraintTop_toBottomOf="@id/mission1"
@@ -183,6 +201,9 @@
             android:id="@+id/mission2_point"
             android:layout_width="50dp"
             android:layout_height="0dp"
+            android:layout_marginStart="4dp"
+            android:elevation="15dp"
+            android:outlineProvider="none"
             android:src="@drawable/point"
             app:layout_constraintBottom_toBottomOf="@id/mission2"
             app:layout_constraintStart_toStartOf="@id/mission2"
@@ -192,17 +213,41 @@
             android:id="@+id/mission2_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="4dp"
+            android:elevation="15dp"
+            android:outlineProvider="none"
             android:text="@string/mission2_title"
             app:layout_constraintBottom_toTopOf="@id/mission2_content"
-            app:layout_constraintEnd_toEndOf="@id/mission2"
+            app:layout_constraintEnd_toStartOf="@id/mission2_btn"
             app:layout_constraintStart_toEndOf="@id/mission2_point"
             app:layout_constraintTop_toTopOf="@id/mission2"
             app:layout_constraintVertical_chainStyle="packed"></TextView>
+        <TextView
+            android:id="@+id/mission2_btn"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:elevation="15dp"
+            android:outlineProvider="none"
+            android:layout_marginEnd="8dp"
+            android:gravity="center_vertical"
+            app:layout_constraintEnd_toEndOf="@id/mission2"
+            app:layout_constraintTop_toTopOf="@id/mission2"
+            app:layout_constraintBottom_toTopOf="@id/mission2_content"
+            android:text="@string/mission_btn"
+            android:textColor="@color/main_color"
+            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
+            ></TextView>
 
         <TextView
             android:id="@+id/mission2_content"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="4dp"
+            android:elevation="15dp"
+            android:outlineProvider="none"
             android:text="@string/mission2_content"
             app:layout_constraintBottom_toTopOf="@id/mission2_progress"
             app:layout_constraintEnd_toEndOf="@id/mission2"
@@ -213,10 +258,14 @@
             android:id="@+id/mission2_progress"
             style="?android:attr/progressBarStyleHorizontal"
             android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:layout_marginEnd="8dp"
+            android:layout_height="12dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginLeft="4dp"
+            android:elevation="15dp"
+            android:outlineProvider="none"
             android:progress="25"
-            android:scaleY="3"
+            android:progressDrawable="@drawable/progress_drawable"
             app:layout_constraintBottom_toBottomOf="@id/mission2"
             app:layout_constraintEnd_toEndOf="@id/mission2"
             app:layout_constraintStart_toEndOf="@id/mission2_point"
