--- a/android/app/src/main/res/layout/fragment_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_dialog.xml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginHorizontal="20dp"
+    android:paddingVertical="40dp"
     >
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/dialog_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_marginHorizontal="100dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"></de.hdodenhof.circleimageview.CircleImageView>
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        ></de.hdodenhof.circleimageview.CircleImageView>
     <TextView
         android:id="@+id/dialog_left_name"
         android:layout_width="wrap_content"
@@ -18,13 +22,14 @@
         android:text="@string/dialog_name"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@id/dialog_right_name"
-        app:layout_constraintTop_toBottomOf="@id/dialog_image"></TextView>
+        app:layout_constraintTop_toBottomOf="@id/dialog_image"
+        app:layout_constraintHorizontal_chainStyle="packed"></TextView>
     <TextView
         android:id="@+id/dialog_right_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintStart_toEndOf="@id/dialog_left_name"
-        app:layout_constraintEnd_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/dialog_image"></TextView>
 
     <TextView
@@ -34,13 +39,14 @@
         android:text="@string/dialog_family"
         app:layout_constraintTop_toBottomOf="@id/dialog_left_name"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/dialog_right_name"></TextView>
+        app:layout_constraintEnd_toStartOf="@id/dialog_right_family"
+        app:layout_constraintHorizontal_chainStyle="packed"></TextView>
     <TextView
         android:id="@+id/dialog_right_family"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/dialog_right_name"
-        app:layout_constraintStart_toEndOf="@id/dialog_left_name"
+        app:layout_constraintStart_toEndOf="@id/dialog_left_family"
         app:layout_constraintEnd_toEndOf="parent"></TextView>
     <TextView
         android:id="@+id/dialog_left_nickname"
@@ -49,18 +55,21 @@
         android:text="@string/dialog_nickname"
         app:layout_constraintTop_toBottomOf="@id/dialog_left_family"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/dialog_right_nickname"></TextView>
+        app:layout_constraintEnd_toStartOf="@id/dialog_right_nickname"
+        app:layout_constraintHorizontal_chainStyle="packed"></TextView>
     <TextView
         android:id="@+id/dialog_right_nickname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/dialog_right_family"
-        app:layout_constraintStart_toEndOf="@id/dialog_left_family"
+        app:layout_constraintStart_toEndOf="@id/dialog_left_nickname"
         app:layout_constraintEnd_toEndOf="parent"></TextView>
     <Button
         android:id="@+id/dialog_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="@string/cancel"
+        app:layout_constraintTop_toBottomOf="@id/dialog_right_nickname"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"></Button>
