FE_221025_board : 게시글 상세 페이지 완료
Former-commit-id: 771e25369ded0fac53b416e452a4c1ef0c9b9e7f

--- a/android/app/src/main/res/navigation/record_tap_nav_graph.xml
+++ b/android/app/src/main/res/navigation/record_tap_nav_graph.xml
@@ -17,4 +17,8 @@
         tools:layout="@layout/fragment_record_board" >
 
     </fragment>
+    <fragment
+        android:id="@+id/recordBoardDetailFragment"
+        android:name="com.ssafy.zip.android.RecordBoardDetailFragment"
+        android:label="RecordBoardDetailFragment" />
 </navigation>
