--- a/android/app/src/main/res/layout/fragment_record_qna.xml
+++ b/android/app/src/main/res/layout/fragment_record_qna.xml
@@ -71,6 +71,6 @@
         android:id="@+id/quiz_recyclerview"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/quiz_item" />
+        tools:listitem="@layout/qna_item" />
 
 </LinearLayout>
