--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -15,11 +15,8 @@
         android:label="fragment_record"
         tools:layout="@layout/fragment_record" >
         <action
-            android:id="@+id/action_recordFragment_to_recordQuizFragment"
-            app:destination="@id/recordQuizFragment" />
-        <action
-            android:id="@+id/action_recordFragment_to_recordLetterFragment"
-            app:destination="@id/recordLetterFragment" />
+            android:id="@+id/action_recordFragment_to_recordBoardFragment2"
+            app:destination="@id/recordBoardFragment2" />
     </fragment>
     <fragment
         android:id="@+id/calendarFragment"
@@ -32,11 +29,8 @@
         android:label="fragment_notification"
         tools:layout="@layout/fragment_notification" />
     <fragment
-        android:id="@+id/recordQuizFragment"
-        android:name="com.ssafy.zip.android.RecordQuizFragment"
-        android:label="RecordQuizFragment" />
-    <fragment
-        android:id="@+id/recordLetterFragment"
-        android:name="com.ssafy.zip.android.RecordLetterFragment"
-        android:label="RecordLetterFragment" />
+        android:id="@+id/recordBoardFragment2"
+        android:name="com.ssafy.zip.android.RecordBoardDetailFragment"
+        android:label="fragment_record_board_detail"
+        tools:layout="@layout/fragment_record_board_detail" />
 </navigation>
