--- a/android/app/src/main/res/layout/photo_slide_item.xml
+++ b/android/app/src/main/res/layout/photo_slide_item.xml
@@ -1,12 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/photo_slide_image"
     android:layout_width="match_parent"
-    android:layout_height="0dp"
-    android:background="@android:color/transparent"
-    android:layout_centerHorizontal="true"
-    app:layout_constraintTop_toBottomOf="@id/photo_appbar_layout"
-    app:layout_constraintBottom_toBottomOf="parent"
+    android:layout_height="match_parent" >
+    <ImageView
+        android:id="@+id/photo_slide_image"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@android:color/transparent"
+        android:layout_centerHorizontal="true"
+        app:layout_constraintBottom_toBottomOf="parent"
     />
+</androidx.constraintlayout.widget.ConstraintLayout>
