--- a/android/app/src/main/res/layout/fragment_record_album_photo_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_album_photo_detail.xml
@@ -20,6 +20,17 @@
             app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium"
             app:titleCentered="true"/>
     </com.google.android.material.appbar.AppBarLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="70dp"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toBottomOf="@id/photo_appbar_layout">
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/photo_recycler_view"
+            android:layout_width="match_parent"
+            tools:listitem="@layout/photo_slide_item"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
     <androidx.viewpager2.widget.ViewPager2
         android:id="@+id/photo_viewpager"
         android:layout_width="match_parent"
@@ -29,7 +40,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"/>
     <ImageButton
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -43,8 +54,7 @@
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:tint="@color/white"
-        android:alpha="0.8"
-        />
+        android:alpha="0.8" />
     <ImageButton
         android:layout_width="30dp"
         android:layout_height="30dp"
@@ -58,12 +68,5 @@
         android:background="@android:color/transparent"
         android:scaleType="fitCenter"
         app:tint="@color/white"
-        android:alpha="0.8"
-        />
-<!--    <androidx.recyclerview.widget.RecyclerView-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="0dp"-->
-<!--        app:layout_constraintTop_toBottomOf="@id/photo_viewpager"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        />-->
+        android:alpha="0.8" />
 </androidx.constraintlayout.widget.ConstraintLayout>
