--- a/android/app/src/main/res/layout/fragment_record_album_photo_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_album_photo_detail.xml
@@ -28,7 +28,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/photo_recycler_view"
             android:layout_width="match_parent"
-            tools:listitem="@layout/photo_slide_item"
+            tools:listitem="@layout/photo_thumbnail_item"
             android:layout_height="match_parent"/>
     </LinearLayout>
     <androidx.viewpager2.widget.ViewPager2
@@ -37,6 +37,7 @@
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
         android:layout_centerHorizontal="true"
+        android:layout_marginTop="120dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
