--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -17,6 +17,9 @@
         <action
             android:id="@+id/action_recordFragment_to_recordBoardFragment2"
             app:destination="@id/recordBoardFragment2" />
+        <action
+            android:id="@+id/action_recordFragment_to_recordQnaDetailFragment"
+            app:destination="@id/recordQnaDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/calendarFragment"
@@ -33,4 +36,8 @@
         android:name="com.ssafy.zip.android.RecordBoardDetailFragment"
         android:label="fragment_record_board_detail"
         tools:layout="@layout/fragment_record_board_detail" />
+    <fragment
+        android:id="@+id/recordQnaDetailFragment"
+        android:name="com.ssafy.zip.android.RecordQnaDetailFragment"
+        android:label="RecordQnaDetailFragment" />
 </navigation>
