FE_221027_calendar:캘린더 create 반쯤
Former-commit-id: 1dd0ec15744229698b01cf783a28c74aff7dc574

--- a/android/app/src/main/res/layout/dialog_add_calendar.xml
+++ b/android/app/src/main/res/layout/dialog_add_calendar.xml
@@ -30,7 +30,7 @@
                     android:layout_height="wrap_content"
                     android:gravity="center"
                     android:text="시작 날짜" />
-                <ImageButton
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/calendar_start_btn"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
