FE_221027_calendarDialog: 캘린더 모달창 구현 중
Former-commit-id: 55b92115e6f165198fc6a08af79f6246e48124cb

--- a/android/app/src/main/res/layout/dialog_add_calendar.xml
+++ b/android/app/src/main/res/layout/dialog_add_calendar.xml
@@ -87,6 +87,15 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:text="함께하는 가족" />
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/family_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:nestedScrollingEnabled="false"
+            android:overScrollMode="never"
+            app:layoutManager="GridLayoutManager"
+            tools:listitem="@layout/family_item" />
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/calendar_text_field"
