--- a/android/app/src/main/res/layout/fragment_calendar.xml
+++ b/android/app/src/main/res/layout/fragment_calendar.xml
@@ -26,7 +26,7 @@
         android:layout_marginStart="20dp"/>
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recycler_view"
+        android:id="@+id/calendar_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/day_text"
