FE_221027_board : 편지 상세 완료
Former-commit-id: 6db709c724c2c8cac37f3b04e3183e0373ee8c99

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -27,6 +27,9 @@
         <action
             android:id="@+id/action_recordFragment_to_recordAlbumPicturesFragment2"
             app:destination="@id/recordAlbumPicturesFragment2" />
+        <action
+            android:id="@+id/action_recordFragment_to_recordLetterDetailFragment"
+            app:destination="@id/recordLetterDetailFragment" />
     </fragment>
     <fragment
         android:id="@+id/calendarFragment"
@@ -70,4 +73,8 @@
             android:id="@+id/action_loginFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+    <fragment
+        android:id="@+id/recordLetterDetailFragment"
+        android:name="com.ssafy.zip.android.RecordLetterDetailFragment"
+        android:label="RecordLetterDetailFragment" />
 </navigation>
