FE_221028_calendar: 종료시간도 완료
Former-commit-id: 1262918355d44648c4a06945ca264c35b264e537

--- a/android/app/src/main/res/layout/dialog_add_calendar.xml
+++ b/android/app/src/main/res/layout/dialog_add_calendar.xml
@@ -12,58 +12,36 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="20dp"
-            android:layout_gravity="center"
-            >
-             <TextView
-                 android:id="@+id/calendar_start"
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:gravity="center"
-                 android:text="시작 날짜" />
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginEnd="10dp"
-                android:gravity="center_vertical"
-                app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />
-            <TextView
-                android:id="@+id/calendar_end"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center"
-                android:text="종료 날짜" />
-        </LinearLayout>
+
+
+
 
         <LinearLayout
             android:id="@+id/endLayout"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
             android:layout_gravity="center">
 
             <TextView
-                android:id="@+id/textView_startDate"
+                android:id="@+id/btn_startDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginBottom="20dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginEnd="10dp"/>
+                android:layout_marginEnd="20dp"
+                android:text="시작 날짜"/>
             <TextView
-                android:id="@+id/textView_endDate"
+                android:id="@+id/btn_endDate"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
-                android:layout_marginBottom="20dp"
                 android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp"/>
+                android:layout_marginStart="20dp"
+                android:text="종료 날짜"/>
         </LinearLayout>
+
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -75,19 +53,27 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
-                android:layout_marginTop="5dp"
                 android:layout_marginEnd="10dp"
-                android:text="시작시간"/>
+                android:text="시작 시간"/>
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                app:srcCompat="@drawable/ic_baseline_arrow_forward_24"
+                android:layout_marginBottom="15dp"/>
 
             <TextView
-                android:id="@+id/textView_startTime"
+                android:id="@+id/btn_endTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:gravity="center"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="20dp"
-                android:layout_marginTop="5dp"
-                android:layout_marginStart="10dp" />
+                android:layout_marginStart="10dp"
+                android:text="종료 시간"/>
         </LinearLayout>
 
         <TextView
@@ -106,7 +92,7 @@
             android:nestedScrollingEnabled="false"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="10dp"
             android:overScrollMode="never"
             app:layoutManager="GridLayoutManager"
             tools:listitem="@layout/family_item" />
