FE_221030_calendar: dialog scrollview
Former-commit-id: d1eecc28d286dcf9b3fd735df198601d11ac3adc

--- a/android/app/src/main/res/layout/dialog_add_calendar.xml
+++ b/android/app/src/main/res/layout/dialog_add_calendar.xml
@@ -1,10 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/sv_root"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    android:name=".NoWeightActivity" android:windowSoftInputMode="adjustResize"
+
     tools:ignore="MissingClass">
 
     <LinearLayout
@@ -111,6 +119,7 @@
             android:layout_marginEnd="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="16dp"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:hint="@string/add_calendar_hint"
@@ -119,7 +128,7 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:singleLine="true" />
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -130,3 +139,4 @@
 
 </androidx.constraintlayout.widget.ConstraintLayout>
 
+</ScrollView>
