FE_221101_board : 게시글 작성 완료
Former-commit-id: 9febfcc5a48c59c02cd51d18717c186c365b2f8c

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -132,7 +132,12 @@
         android:id="@+id/recordBoardCreateFragment"
         android:name="com.ssafy.zip.android.RecordBoardCreateFragment"
         android:label="fragment_record_board_create"
-        tools:layout="@layout/fragment_record_board_create" />
+        tools:layout="@layout/fragment_record_board_create" >
+        <action
+            android:id="@+id/action_recordBoardCreateFragment_pop"
+            app:popUpTo="@id/recordBoardCreateFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
     <fragment
         android:id="@+id/recordLetterCreateFragment"
         android:name="com.ssafy.zip.android.RecordLetterCreateFragment"
