--- a/android/app/src/main/res/layout/calendar_member_item.xml
+++ b/android/app/src/main/res/layout/calendar_member_item.xml
@@ -16,6 +16,7 @@
         >
 
         <de.hdodenhof.circleimageview.CircleImageView
+            android:clickable="true"
             android:id="@+id/calendar_member_image"
             android:layout_width="28dp"
             android:layout_height="28dp"
