FE_221101_calendar: 함께하는 가족 구현
Former-commit-id: e4d979d2b3e2190a776bed299ab2fb254aa1dca1

--- a/android/app/src/main/res/layout/family_item.xml
+++ b/android/app/src/main/res/layout/family_item.xml
@@ -8,6 +8,7 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/family_image"
+        android:alpha="0.6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
