FE_221103_board : 백문백답 기능구현 완료
Former-commit-id: 18695fada0cd97e863b7d2654356154c58b414e0

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -54,7 +54,11 @@
         android:id="@+id/recordBoardFragment2"
         android:name="com.ssafy.zip.android.RecordBoardDetailFragment"
         android:label="fragment_record_board_detail"
-        tools:layout="@layout/fragment_record_board_detail" />
+        tools:layout="@layout/fragment_record_board_detail" >
+        <action
+            android:id="@+id/action_recordBoardFragment2_to_recordQnaDetailFragment"
+            app:destination="@id/recordQnaDetailFragment" />
+    </fragment>
     <fragment
         android:id="@+id/recordQnaDetailFragment"
         android:name="com.ssafy.zip.android.RecordQnaDetailFragment"
