FE_221103_calendar: 일정 삭제, material calendar로 변경
Former-commit-id: 7692f522e25cc84104eb4e08e0baaca0362224fc

--- a/android/app/src/main/res/layout/fragment_calendar.xml
+++ b/android/app/src/main/res/layout/fragment_calendar.xml
@@ -6,6 +6,7 @@
         name="viewmodel"
         type="com.ssafy.zip.android.viewmodel.CalendarViewModel" />
 </data>
+
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -14,14 +15,15 @@
     tools:context=".CalendarFragment"
     tools:ignore="MissingClass">
 
-    <CalendarView
+    <com.prolificinteractive.materialcalendarview.MaterialCalendarView
         android:id="@+id/calendarView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="7dp"
+        android:layout_marginEnd="7dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.048" />
-
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/day_text"
@@ -30,7 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toBottomOf="@id/calendarView"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="5dp"
         android:layout_marginStart="25dp"
         android:layout_marginEnd="25dp"
         />
