FE_221104_board : 오늘의 편지 작성, 오늘의 편지 상세 테스트 전
Former-commit-id: e84a269113eea8ca34a008a6158c3bd81ec57f74

--- a/android/app/src/main/res/layout/fragment_record_letter_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_letter_detail.xml
@@ -71,6 +71,7 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <LinearLayout
+        android:id="@+id/letter_container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/textview_border"
