FE_221104_fix : 로그아웃 추가
Former-commit-id: 575c29f10826e7aa80d4cb43d9c2e1c9e6b36648

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -12,6 +12,9 @@
         <action
             android:id="@+id/action_homeFragment_to_recordFragment"
             app:destination="@id/recordFragment" />
+        <action
+            android:id="@+id/action_homeFragment_to_loginFragment"
+            app:destination="@id/loginFragment" />
     </fragment>
     <fragment
         android:id="@+id/recordFragment"
