FE_221105_fix : 게시글탭 UI 수정중(여백, 날짜 표시)
Former-commit-id: 7dc44e36635f3ded39e502ed85b320f6ccc819fc

--- a/android/app/src/main/res/layout/fragment_record_board.xml
+++ b/android/app/src/main/res/layout/fragment_record_board.xml
@@ -22,6 +22,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="40dp"
                 android:orientation="horizontal"
+                android:background="@drawable/layout_bottom"
                 >
 
                 <RadioGroup
